--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -10,6 +10,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
+    "tsc": "tsc --noEmit",
     "lint": "tsdx lint",
     "prepare": "tsdx build"
   },
@@ -25,28 +26,11 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "^~(.*)$": "<rootDir>/src$1"
-    }
-  },
-  "babel": {
-    "plugins": [
-      [
-        "babel-plugin-root-import",
-        {
-          "rootPathSuffix": "./src",
-          "rootPathPrefix": "~/"
-        }
-      ]
-    ]
-  },
   "name": "narrow-object",
   "author": "yasintz",
   "module": "dist/narrow-object.esm.js",
   "devDependencies": {
     "@types/jest": "^25.1.3",
-    "babel-plugin-root-import": "^6.4.1",
     "husky": "^4.2.3",
     "tsdx": "^0.12.3",
     "tslib": "^1.11.0",
